--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         compileSdkVersion = 29
         targetSdkVersion = 29
         ndkVersion = "20.1.5948944"
-        googlePlayServicesAdsVersion = "20.+"
+        googlePlayServicesAdsVersion = "21.3.0"
     }
     repositories {
         google()
