--- a/android/build.gradle
+++ b/android/build.gradle
@@ -56,5 +56,5 @@ dependencies {
     implementation "com.google.android.gms:play-services-ads:${safeExtGet('googlePlayServicesAdsVersion', '21.3.0')}"
     implementation 'com.android.support:support-annotations:28.0.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 }
